<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/solution_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/result_tv"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/lbl_0"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="64sp" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/first_buttons_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btn_clr"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/red"
                android:text="@string/lbl_c"
                />
            <Button
                android:id="@+id/btn_brac_open"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_grey"
                android:text="@string/bracket_open_sign"
                />
            <Button
                android:id="@+id/btn_brac_close"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_grey"
                android:text="@string/bracket_close_sign"
                 />
            <Button
                android:id="@+id/btn_divide"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/green"
                android:text="@string/divide_sign"
                 />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/second_buttons_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"

            >
            <Button
                android:id="@+id/btn_seven"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/orange"
                android:text="@string/lbl_7"
                 />
            <Button
                android:id="@+id/btn_eight"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/orange"
                android:text="@string/lbl_8"
                 />
            <Button
                android:id="@+id/btn_nine"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/orange"
                android:text="@string/lbl_9"
                 />
            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/green"
                android:text="@string/multiplication_sign"
                 />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/third_buttons_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/btn_four"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/orange"
                android:text="@string/lbl_4"
                 />
            <Button
                android:id="@+id/btn_five"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/orange"
                android:text="@string/lbl_5"
                 />
            <Button
                android:id="@+id/btn_six"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/orange"
                android:text="@string/lbl_6"
                 />
            <Button
                android:id="@+id/btn_minus"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/green"
                android:text="@string/lbl_minus"
                 />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fourth_buttons_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btn_one"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/orange"
                android:text="@string/lbl_1"
                 />
            <Button
                android:id="@+id/btn_two"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/orange"
                android:text="@string/lbl_2"
                 />
            <Button
                android:id="@+id/btn_three"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/orange"
                android:text="@string/lbl_3"
                 />
            <Button
                android:id="@+id/btn_addition"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/green"
                android:text="@string/addition_sign"
                 />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fifth_buttons_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btn_all_clr"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="21sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/red"
                android:text="@string/lbl_ac"
                 />

            <Button
                android:id="@+id/btn_zero"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/orange"
                android:text="@string/lbl_0"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="DuplicateSpeakableTextCheck" />
            <Button
                android:id="@+id/btn_decimal"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/orange"
                android:text="@string/lbl_decimal_point"
                 />
            <Button
                android:id="@+id/btn_equal"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="@color/green"
                android:text="@string/lbl_equal"
                 />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>